# LearnMax

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: practice-creator.md
.claude/commands/: learn.md
.github/: CONTRIBUTING.md
src/learn_max/: __init__.py
src/learn_max/cli/: __init__.py  main.py
src/learn_max/templates/: instructions.md
src/learn_max/templates/modes/balanced/commands/: learn.md  progress.md  review.md
src/learn_max/templates/modes/balanced/system_prompts/: learn-max.md
src/learn_max/templates/modes/exam/agents/: exam-generator.md
src/learn_max/templates/modes/exam/commands/: generate-exam.md  learn.md
src/learn_max/templates/modes/exam/system_prompts/: learn-max.md
src/learn_max/templates/modes/practical/agents/: practice-creator.md
src/learn_max/templates/modes/practical/commands/: learn.md
src/learn_max/templates/modes/practical/system_prompts/: learn-max.md
src/learn_max/templates/modes/programming/agents/: practice-creator.md
src/learn_max/templates/modes/programming/commands/: learn.md
src/learn_max/templates/modes/programming/system_prompts/: learn-max.md
src/learn_max/templates/modes/theory/commands/: learn.md  progress.md
src/learn_max/templates/modes/theory/system_prompts/: learn-max.md
src/learn_max/templates/references/: faster_framework.md
src/learn_max/templates/scripts/: concept_quiz.py  config.json  generate_exam_pdf.py  generate_syllabus.py  init_learning.py  log_progress.py  review_scheduler.py
