[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learn-max"
version = "1.2.0"
description = "Learn FASTER: Accelerate learning with spaced repetition, active practice, and teaching-based retention"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Hugo Lau", email = "cheukyin175@gmail.com" }
]
keywords = ["learning", "education", "spaced-repetition", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "inquirer>=3.1.0",
    "reportlab>=4.0.0",
]

[project.scripts]
learn-max = "learn_max.cli.main:main"

[project.urls]
Homepage = "https://github.com/harunme/LearnMax"
Repository = "https://github.com/harunme/LearnMax"
Issues = "https://github.com/harunme/LearnMax/issues"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/learn_max"]

[tool.hatch.build.targets.wheel.force-include]
"src/learn_max/templates" = "learn_max/templates"
